iter_language/tests/corpus/invalid/flat-syntax.iter
queue memory

workspace clone {
  base = "."
  excludes = []
  preserve_mtime = true
  apply_back { mode = sync }
}

agent claude {
  mode = print
  command = "claude"
}

runner {
  continue_on_error = false
  behavior = wait
}

prompt "Iterate."
